Remove unused comment